# metermaid

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  cspell.json  index.html  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  site-deploy.yml
docs/: asio-windows-support-plan.md
site/: .gitignore  CLAUDE.md  README.md  eleventy.config.js  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml
site/content/: whatsnew.md
site/scripts/: dev.mjs  serve-site.mjs
site/src/: index.edge  robots.txt  sitemap.edge  updates.edge
site/src/_data/: release.js  site.json  whatsnew.js
site/src/_includes/layouts/: base.edge
site/src/css/: styles.css
site/tests/: site.spec.js
src/: main.ts  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  mac_permissions.rs  main.rs
