[package]
name = "metermaid"
version = "0.4.1"
description = "MeterMaid — LUFS / loudness meter"
authors = ["David Neal <david@reverentgeek.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/reverentgeek/metermaid"
homepage = "https://github.com/reverentgeek/metermaid"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "metermaid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.18"
ebur128 = "0.1"
rustfft = "6"
ringbuf = "0.4"

# The self-updater is desktop-only (no mobile target).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# macOS microphone permission. cpal talks to the CoreAudio HAL, which is *not*
# the TCC-aware API: it never raises the OS microphone prompt, and on older
# macOS (e.g. Catalina) the HAL even returns an *empty* input-device list until
# access is granted — deadlocking the picker (no devices → can't Start → no
# prompt → no devices). We break that by explicitly requesting access through
# AVFoundation (`AVCaptureDevice`), which *does* trigger the prompt. `objc2` is
# already in the tree transitively; `block2` backs the completion handler.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
# `default-features = false` is load-bearing: the default feature set pulls in
# `objc2-avf-audio`, which links `AVFAudio.framework` — a framework that only
# exists on macOS 11+. Linking it breaks the build on Catalina (10.15), exactly
# the OS this fix targets. `AVCaptureDevice` (the permission API) and
# `AVMediaFormat` (the `AVMediaTypeAudio` constant) need only AVFoundation,
# which has shipped since 10.7.
objc2-av-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "block2",
    "AVCaptureDevice",
    "AVMediaFormat",
] }
block2 = "0.6"

# ASIO host — x64 Windows only. ASIO exposes the device's native channel count
# (WASAPI shared mode reports only the endpoint default, often mono). There is
# no ARM64 ASIO SDK, so this feature is scoped to x86_64. Building it requires
# libclang (bindgen) + the MSVC C++ toolchain and `CPAL_ASIO_DIR` pointing at
# the Steinberg ASIO SDK. Cargo unifies this with the base `cpal` dependency.
[target.'cfg(all(windows, target_arch = "x86_64"))'.dependencies]
cpal = { version = "0.18", features = ["asio"] }

# cpal 0.18 declares `windows` and `windows-core` as independent dependencies
# (each ">=0.61, <=0.62"). Tauri's `tao` pins `windows` to 0.61, but nothing
# constrains `windows-core`, so it floats to 0.62 — and cpal's WASAPI backend
# uses the `implement` macro from `windows` 0.61 while referencing
# `windows-core` 0.62 types, which don't match (build fails with
# "IActivateAudioInterfaceCompletionHandler: windows_core::Interface is not
# satisfied"). Pin `windows-core` to the 0.61 line so it matches the resolved
# `windows` crate. Applies to all Windows targets (WASAPI), not just ASIO.
[target.'cfg(windows)'.dependencies]
windows-core = "0.61"

